--- a/src/Navigation/Navigation.css
+++ b/src/Navigation/Navigation.css
@@ -1,20 +1,42 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+
 * {
+  font-family: "Roboto", sans-serif;
   margin: 0px;
   padding: 0px;
 }
 
 .nav_container {
-  background-color: rgb(97, 97, 251);
+  background-color: white;
   width: 100%;
-  height: 10%;
-  color: white;
+  height: 3.5rem;
+  color: #31a5f8;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav_container span {
   display: block;
+  font-size: 1.7rem;
+  font-weight: bold;
+  color: #061541;
+  cursor: pointer;
+  font-family: "Goldman", cursive;
 }
 
 .nav_container ul {
-  display: block;
+  display: flex;
+}
+
+.nav_container li {
+  list-style: none;
+  margin-left: 20px;
+  font-size: 1.3rem;
+  cursor: pointer;
+}
+
+.nav_container li:hover {
+  color: #061541;
+  font-weight: bold;
 }
