--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,8 @@
 }
 
 body {
-  background-color: #f7f8fa;
   font-family: "Roboto", sans-serif;
+  width: 100%;
+  height: 100vh;
+  background-color: #e1e2e1;
 }
