--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,15 @@
 }
 
 .app_container {
-  background-color: #f7f8fa;
+  width: 100%;
+  height: 100vh;
+  /* #f7f8fa */
+  background-color: #e1e2e1;
+  background-size: 100%;
+}
+
+.app_main {
+  display: flex;
+  width: 100%;
+  height: 92%;
 }
