--- a/src/Board/boardlist.css
+++ b/src/Board/boardlist.css
@@ -1,20 +1,39 @@
 .list_container {
-  width: 50%;
-  margin: 0 auto;
-  margin-top: 5%;
+  width: 70%;
+  height: 100%;
+  margin: 0 5%;
+}
+
+.list_image {
+  background-image: url("../pullup.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  color: white;
+  padding: calc(3 / 100 * 100vw) 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.list_image span {
+  font-family: "Goldman", cursive;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .list_header {
   display: flex;
   text-align: center;
-  font-size: 1.1rem;
+  font-size: 16px;
   font-weight: bold;
   border-bottom: 1px solid black;
-  background-color: #b1bfca;
+  background-color: #5472d3;
+  color: white;
 }
 
 .list_header div {
-  padding: 8px;
+  padding: 8px 0;
 }
 
 .list_header div + div {
@@ -22,11 +41,11 @@
 }
 
 .header_num {
-  flex: 1 1 7%;
+  flex: 1 1 13%;
 }
 
 .header_title {
-  flex: 1 1 57%;
+  flex: 1 1 51%;
 }
 
 .header_writer {
@@ -35,4 +54,74 @@
 
 .header_time {
   flex: 1 1 18%;
+}
+
+.list_main_not {
+  text-align: center;
+  width: 100%;
+  background-color: #e3f2fd;
+  font-weight: bold;
+  font-size: 16px;
+  padding: 10px 0px;
+}
+
+.listPage_container {
+  text-align: center;
+  margin-top: 10px;
+  width: 100%;
+}
+
+.list_pageBtn {
+  background: none;
+  color: #31a5f8;
+  outline: none;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  padding: 3px 5px;
+}
+
+.list_pageBtn:hover {
+  color: black;
+  font-weight: bold;
+  font-size: 17px;
+}
+
+.notShowing {
+  display: none;
+}
+
+@media (max-width: 1100px) {
+  .list_container {
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 2%;
+  }
+
+  .list_image {
+    width: 100%;
+    padding: calc(1.2 / 100 * 100vw) 0px;
+  }
+}
+
+@media (max-width: 768px) {
+  .list_image span {
+    font-size: 20px;
+  }
+
+  .list_header {
+    font-size: 14px;
+  }
+
+  .list_main_not {
+    font-size: 14px;
+  }
+
+  .list_pageBtn {
+    font-size: 14px;
+  }
+
+  .list_pageBtn:hover {
+    font-size: 16px;
+  }
 }
