--- a/src/Login/checkpage.css
+++ b/src/Login/checkpage.css
@@ -1,27 +1,26 @@
 .check_container {
-  margin: 0 auto;
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 50%;
+  width: 70%;
   background-color: white;
-  margin-top: 5rem;
+  margin: 5rem 5%;
   border-radius: 15px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .check_message {
-  font-size: 1.3rem;
+  font-size: 20px;
   margin-bottom: 15px;
 }
 
 .check_input {
   margin-bottom: 10px;
-  font-size: 1.3rem;
+  font-size: 20px;
 }
 
 .check_btn {
-  font-size: 1.3rem;
+  font-size: 20px;
   color: white;
   border: none;
   border-radius: 10px;
@@ -30,4 +29,24 @@
   margin-bottom: 15px;
   font-weight: bold;
   background-color: #3252f9;
+}
+
+@media (max-width: 768px) {
+  .check_container {
+    width: 90%;
+    margin: 5rem 5%;
+  }
+
+  .check_message {
+    font-size: 16px;
+    width: 65%;
+  }
+
+  .check_input {
+    font-size: 16px;
+  }
+
+  .check_btn {
+    font-size: 16px;
+  }
 }
