--- a/src/Login/mypage.css
+++ b/src/Login/mypage.css
@@ -1,11 +1,10 @@
 .mypage_container {
-  margin: 0 auto;
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 40%;
+  width: 70%;
+  margin: 5rem 5%;
   background-color: white;
-  margin-top: 5rem;
   border-radius: 15px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
@@ -19,13 +18,13 @@
 }
 
 .mypage_id {
-  font-size: 1.3rem;
+  font-size: 20px;
   font-weight: bold;
   flex: 1 1 30%;
 }
 
 .mypage_loginId {
-  font-size: 1.7rem;
+  font-size: 26px;
   font-weight: bold;
   margin-left: 10px;
   flex: 1 1 70%;
@@ -40,24 +39,24 @@
 
 .mypage_nick {
   width: 50%;
-  font-size: 1.3rem;
+  font-size: 20px;
   font-weight: bold;
   flex: 1 1 30%;
 }
 
 .mypage_loginNick {
-  font-size: 1.3rem;
+  font-size: 20px;
   flex: 1 1 65%;
   text-align: center;
 }
 
 .mypage_changeNickBtn {
   flex: 1 1 5%;
-  font-size: 1.3rem;
+  font-size: 20px;
 }
 
 .mypage_nickInfo {
-  font-size: 0.8rem;
+  font-size: 12px;
   color: forestgreen;
   margin-bottom: 18px;
 }
@@ -70,18 +69,18 @@
 }
 
 .mypage_pwd {
-  font-size: 1.3rem;
+  font-size: 20px;
   font-weight: bold;
   flex: 1 1 30%;
 }
 
 .mypage_inputPwd {
-  font-size: 1.3rem;
+  font-size: 20px;
   flex: 1 1 65%;
 }
 
 .mypage_changePwdBtn {
-  font-size: 1.3rem;
+  font-size: 20px;
   flex: 1 1 5%;
 }
 
@@ -92,30 +91,30 @@
 }
 
 .mypage_rePwd {
-  font-size: 1.3rem;
+  font-size: 20px;
   font-weight: bold;
   flex: 1 1 30%;
 }
 
 .mypage_inputRePwd {
-  font-size: 1.3rem;
+  font-size: 20px;
   flex: 1 1 65%;
   margin-right: 5px;
 }
 
 .mypage_rePwdArea {
-  font-size: 1.3rem;
+  font-size: 20px;
   flex: 1 1 5%;
 }
 
 .mypage_pwdInfo {
-  font-size: 0.8rem;
+  font-size: 12px;
   color: forestgreen;
 }
 
 .mypage_deleteBtn {
   margin-top: 20px;
-  font-size: 1.1rem;
+  font-size: 16px;
   color: white;
   border: none;
   border-radius: 10px;
@@ -125,4 +124,88 @@
   margin-top: 30px;
   font-weight: bold;
   background-color: red;
+}
+
+@media (max-width: 1100px) {
+  .mypage_container {
+    width: 90%;
+    margin: 5rem 5%;
+  }
+}
+
+@media (max-width: 768px) {
+  .mypage_idContainer {
+    width: 80%;
+  }
+
+  .mypage_id {
+    font-size: 14px;
+  }
+
+  .mypage_loginId {
+    font-size: 18px;
+    width: 50%;
+  }
+
+  .mypage_nickContainer {
+    width: 80%;
+  }
+
+  .mypage_nick {
+    font-size: 14px;
+  }
+
+  .mypage_loginNick {
+    font-size: 18px;
+    width: 50%;
+  }
+
+  .mypage_changeNickBtn {
+    font-size: 18px;
+  }
+
+  .mypage_nickInfo {
+    font-size: 10px;
+  }
+
+  .mypage_pwdContainer {
+    width: 80%;
+  }
+
+  .mypage_pwd {
+    font-size: 14px;
+  }
+
+  .mypage_inputPwd {
+    font-size: 14px;
+    width: 50%;
+  }
+
+  .mypage_changePwdBtn {
+    font-size: 14px;
+  }
+
+  .mypage_rePwdContainer {
+    width: 80%;
+  }
+
+  .mypage_rePwd {
+    font-size: 14px;
+  }
+
+  .mypage_inputRePwd {
+    font-size: 14px;
+  }
+
+  .mypage_rePwdArea {
+    font-size: 14px;
+  }
+
+  .mypage_pwdInfo {
+    font-size: 10px;
+  }
+
+  .mypage_deleteBtn {
+    font-size: 14px;
+  }
 }
