--- a/src/Sidebar/plan.css
+++ b/src/Sidebar/plan.css
@@ -2,23 +2,50 @@
 }
 
 .planData_content {
+  margin-top: 10px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
 }
 
 .planData_title {
-  width: 60%;
+  width: 40%;
+  margin-left: 5px;
 }
 
 .planData_counts {
-  width: 60%;
+  margin-right: 5px;
   display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .planData_inputCount {
-  width: 30%;
+  margin-right: 5px;
+  width: 15%;
+  text-align: center;
+  font-size: 1rem;
+  line-height: 1rem;
 }
 
 .planData_count {
-  width: 40%;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.planData_progress {
+  margin-top: 5px;
+  width: 70%;
+}
+
+.planData_percent {
+  margin-left: 10px;
+  font-weight: bold;
+}
+
+.planData_changeBtn {
+  margin-left: 10px;
+  border: none;
+  background: none;
+  cursor: pointer;
 }
