--- a/src/Sidebar/sidebar.css
+++ b/src/Sidebar/sidebar.css
@@ -1,10 +1,18 @@
+.sidebar_nLogin {
+  display: block;
+  text-align: center;
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-top: 20%;
+}
+
 .sidebar_container {
-  background-color: #31a5f8;
+  background-color: #002171;
   color: white;
-  width: 20%;
-  height: 92.5%;
-  position: absolute;
-  right: 0px;
+  width: 320px;
+  height: 80vh;
+  position: fixed;
+  right: 0;
 }
 
 .sidebar_nick {
@@ -75,4 +83,27 @@
 
 .count_btn {
   width: 15%;
+}
+
+.plan_changeMsg {
+  text-align: center;
+  margin-top: 20px;
+  font-weight: bold;
+  font-size: 1.15rem;
+}
+
+.plan_changeBtn {
+  margin-top: 10px;
+  width: 100%;
+  font-size: 1.4rem;
+  color: rgb(2, 255, 2);
+  border: none;
+  background: none;
+  outline: none;
+}
+
+@media (max-width: 1100px) {
+  .sidebar_container {
+    display: none;
+  }
 }
