--- a/src/Board/boarditem.css
+++ b/src/Board/boarditem.css
@@ -5,7 +5,8 @@
   font-size: 16px;
   font-weight: bold;
   border-bottom: 1px solid white;
-  background-color: #e3f2fd;
+  background-color: #fcdab7;
+  color: #1d2d50;
 }
 
 .item_container div {
