--- a/src/Navigation/Navigation.css
+++ b/src/Navigation/Navigation.css
@@ -10,7 +10,7 @@
   background-color: white;
   width: 100%;
   height: 3.5rem;
-  color: #31a5f8;
+  color: #1e5f74;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -20,7 +20,7 @@
   display: block;
   font-size: 27px;
   font-weight: bold;
-  color: #061541;
+  color: #1d2d50;
   cursor: pointer;
   font-family: "Goldman", cursive;
 }
@@ -38,7 +38,7 @@
 }
 
 .nav_container li:hover {
-  color: #061541;
+  color: #1d2d50;
   font-weight: bold;
 }
 
