--- a/src/Sidebar/sidebar.css
+++ b/src/Sidebar/sidebar.css
@@ -7,10 +7,10 @@
 }
 
 .sidebar_container {
-  background-color: #002171;
-  color: white;
+  background-color: #1d2d50;
+  color: #fcdab7;
   width: 320px;
-  height: 80vh;
+  height: 93vh;
   position: fixed;
   right: 0;
 }
@@ -100,6 +100,7 @@
   border: none;
   background: none;
   outline: none;
+  cursor: pointer;
 }
 
 @media (max-width: 1100px) {
